<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/cardViewPadding">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/expandableListPreferredItemPaddingLeft"
        android:padding="@dimen/restaurant_card_padding_common"
        card_view:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp">

            <ImageView
                android:id="@+id/restaurantThumbImage"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/googleg_standard_color_18"
                android:contentDescription="@string/restaurant_thumb" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/restaurantThumbImage"
                android:orientation="vertical"
                android:paddingLeft="@dimen/dp15">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/dp5"
                    android:paddingRight="@dimen/dp15"
                    android:paddingTop="@dimen/dp5">

                    <TextView
                        android:id="@+id/ratingText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_gravity="right"
                        android:minWidth="20dp"
                        android:paddingLeft="@dimen/dp5"
                        android:paddingRight="@dimen/dp5"
                        android:text="@string/rating"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/restaurantName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_toStartOf="@id/ratingText"
                        android:text="@string/restaurant_name"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />


                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/avgCostForTwo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/average_cost_for_two"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/avgCostForTwoValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp5"
                        android:text="@string/cost" />
                </LinearLayout>

                <TextView
                    android:id="@+id/restaurantAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:textColor="@android:color/darker_gray" />
            </LinearLayout>
        </RelativeLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>